--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </nav>
     <!-- carouse -->
     <div class="container">
-        <div id="carouselExample" class="carousel slide orange-bg" data-ride="carousel">
+        <div id="carouselExample" class="carousel slide orange-bg" data-ride="carousel"  data-bs-ride="carousel" data-bs-interval="2000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="row align-items-center">
